--- a/Flexbox-website/css/main.css
+++ b/Flexbox-website/css/main.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Spectral');
 
-/*font-family: 'Montserrat', sans-serif;*/
+@import url('https://fonts.googleapis.com/css?family=Nunito|Source+Sans+Pro');
 
 body{
+
+  /*font-family: 'Source Sans Pro', sans-serif;*/
+
+  font-family: 'Nunito', sans-serif;
+
+  /*font-family: 'Montserrat', sans-serif;*/
   display:-webkit-box; /*old prefixed for webkit*/
   display:-moz-box; /*old prefixed for mozilla*/
   display:-ms-flexbox; /*inbetween prefixed for ie*/
@@ -12,8 +19,28 @@ body{
 }
 
 
+.logo, h1, h2, h3, .nav{
+  font-family: 'Spectral', serif;
+}
+
+p{
+  font-size: 14px;
+  letter-spacing: 0.5px;
+}
+
+h1{
+  color: white;
+}
+
+button{
+  
+}
+
 header{
-    background-color: #EBC0F2;
+    /*background-color: #EBC0F2;*/
+    background-image: url("../images/deep-forest.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -22,16 +49,19 @@ header{
 .nav{
   background-color: white;
   display: flex;
-  padding: 20px 20px;
+  font-size: 0.9em;
+  padding: 20px;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .logo{
   align-items: flex-start;
+  font-size: 24px;
 }
 
 .nav ul{
+  margin-top: 4px;
   display: flex;
   flex-direction: row;
 }
@@ -56,7 +86,7 @@ header{
 
 .main-title h1{
   text-align: center;
-  max-width: 500px;
+  max-width: 700px;
 }
 
 .main-title button{
@@ -98,17 +128,84 @@ example{
   flex: 1;
 }
 
-
-
 plans{
   background-color: #C4F2D0;
+  padding: 30px;
+}
+
+.boxes{
+  display: flex;
+  flex-flow: row wrap;
+}
+
+plans .planBox{
+  background-color: white;
+  margin: 10px;
+  padding: 20px 40px 40px;
+  flex: 1 250px;
 }
 
 features{
   background-color: #EBC0F2;
+  padding: 40px;
 }
 
+.section-one{
+  display: flex;
+  flex-flow:wrap
+}
+
+.one-text{
+  flex: 2 150px;
+  margin-right: 40px;
+}
+
+.one-box{
+  background-color: white;
+  width: 200px;
+  height: 200px;
+}
+
+.section-two{
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.featBox{
+  flex:1 200px;
+  padding-right: 20px;
+
+}
 
 footer{
+  color: white;
+  padding: 30px;
   background-color: #373737;
+}
+
+.footer-menu{
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.footer-cat{
+  flex: 1;
+}
+
+.footer-copyright{
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+.footer-copyright ul{
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.footer-copyright ul li{
+  margin-right: 10px;
 }
