--- a/Flexbox-website/css/style.css
+++ b/Flexbox-website/css/style.css
@@ -45,10 +45,14 @@ section {
  */
 
 h1 {
-  font-size: 2em;
+  font-size: 3em;
   margin: 0.67em 0;
 }
 
+ul, p{
+  margin: 0;
+  padding: 0;
+}
 
 li{
   list-style: none;
@@ -254,6 +258,7 @@ textarea {
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
+
 }
 
 /**
