--- a/Flexbox-website/css/main.css
+++ b/Flexbox-website/css/main.css
@@ -33,13 +33,15 @@ h1{
 }
 
 button{
-  
+  color: white;
+  border: none;
+  background-color: #87917E;
+  padding: 10px 20px;
 }
 
 header{
     /*background-color: #EBC0F2;*/
     background-image: url("../images/deep-forest.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
     display: flex;
@@ -94,7 +96,6 @@ header{
 }
 
 testimonial{
-  background-color: #F2CEED;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -106,12 +107,16 @@ testimonial p{
 }
 
 strength{
+  background-image: url("../images/food.jpg");
   display: flex;
+  background-size: cover;
   background-color: #CEEBF2;
   padding: 50px 40px;
 }
 
 example{
+  background-image: url("../images/village.jpg");
+  background-size: cover;
   display: flex;
   flex-direction: row-reverse;
   background-color: #F2ECC4;
@@ -129,7 +134,7 @@ example{
 }
 
 plans{
-  background-color: #C4F2D0;
+  background-color: #F1F0EC;
   padding: 30px;
 }
 
@@ -146,7 +151,7 @@ plans .planBox{
 }
 
 features{
-  background-color: #EBC0F2;
+  background-color: white;
   padding: 40px;
 }
 
@@ -180,7 +185,7 @@ features{
 footer{
   color: white;
   padding: 30px;
-  background-color: #373737;
+  background-color: #87917E;
 }
 
 .footer-menu{
