--- a/Flexbox-website/css/main.css
+++ b/Flexbox-website/css/main.css
@@ -3,6 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Nunito|Source+Sans+Pro');
 
+
 body{
 
   /*font-family: 'Source Sans Pro', sans-serif;*/
@@ -19,12 +20,16 @@ body{
 }
 
 
-.logo, h1, h2, h3, .nav{
+.logo, h1, h2, h3, h4, .nav{
   font-family: 'Spectral', serif;
 }
 
+h4{
+  margin-bottom: 10px;
+}
+
 p{
-  font-size: 14px;
+  font-size: 0.9em;
   letter-spacing: 0.5px;
 }
 
@@ -37,6 +42,7 @@ button{
   border: none;
   background-color: #87917E;
   padding: 10px 20px;
+  margin-top: 15px;
 }
 
 header{
@@ -46,6 +52,10 @@ header{
     height: 100vh;
     display: flex;
     flex-direction: column;
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .nav{
@@ -102,6 +112,16 @@ testimonial{
   padding: 60px 0;
 }
 
+testimonial .star-icon{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+  testimonial .star-icon li{
+    margin-right: 5px;
+  }
+
 testimonial p{
   width: 70%;
 }
@@ -112,6 +132,13 @@ strength{
   background-size: cover;
   background-color: #CEEBF2;
   padding: 50px 40px;
+
+  /*parallex*/
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 
 example{
@@ -152,35 +179,56 @@ plans .planBox{
 
 features{
   background-color: white;
-  padding: 40px;
+  padding: 20px;
+}
+
+features h2{
+  padding-left: 20px;
 }
 
 .section-one{
+  padding: 20px;
   display: flex;
   flex-flow:wrap
 }
 
 .one-text{
   flex: 2 150px;
-  margin-right: 40px;
 }
 
-.one-box{
-  background-color: white;
-  width: 200px;
-  height: 200px;
-}
+
+/*.section-two{
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-between;
+}*/
 
 .section-two{
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: wrap;
+  justify-content: space-around;
 }
+
 
 .featBox{
-  flex:1 200px;
-  padding-right: 20px;
-
+  /*width: 260px;*/
+  flex:1 260px;
+  padding: 20px;
+  margin: 40px 0;
 }
+
+.featBox-cool img{
+  height: 160px;
+  margin-bottom: 20px;
+}
+
+.featBox-cool img{
+  display: block;
+  width: 100%;
+  height: 100%;
+  height: auto;
+}
+
 
 footer{
   color: white;
@@ -191,17 +239,32 @@ footer{
 .footer-menu{
   display: flex;
   flex-flow: row wrap;
+  margin-bottom: 60px;
+}
+
+.footer-menu p, .footer-menu ul li{
+  font-size: 0.8em;
+  line-height: 1.6em;
+}
+
+.social-links ul{
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+}
+
+.social-links ul li{
+  margin-right: 26px;
 }
 
 .footer-cat{
-  flex: 1;
+  margin-right: 60px;
+  margin-bottom: 20px;
 }
 
 .footer-copyright{
   display: flex;
   flex-direction: row;
-  margin-top: 40px;
-  margin-bottom: 10px;
 }
 
 .footer-copyright ul{
