--- a/Flexbox-website/css/style.css
+++ b/Flexbox-website/css/style.css
@@ -184,7 +184,7 @@ mark {
  */
 
 small {
-  font-size: 80%;
+  font-size: 0.8em;
 }
 
 /**
@@ -194,7 +194,7 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
+  font-size: .75em;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
@@ -259,7 +259,7 @@ optgroup,
 select,
 textarea {
   font-family: sans-serif; /* 1 */
-  font-size: 100%; /* 1 */
+  font-size: 1em; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
 
